changes are as follows ✅ Register ✅ Login (with encrypted JWT) ✅ Refresh token logic ✅ Logout with token revocation

--- a/AuthService.API/appsettings.json
+++ b/AuthService.API/appsettings.json
@@ -8,5 +8,15 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Server=SURAJ\\SQLEXPRESS;Database=BusBooking.Auth;Trusted_Connection=True;Encrypt=False;"
+    },
+    "JwtSettings": {
+        "SecretKey": "WHY_SHOULD_I_SHARE_SECRET_KEY_WITH_YOU_!@#$",
+        "Issuer": "BusBooking.Auth",
+        "Audience": "BusBooking.Client",
+        "ExpiryMinutes": 60
+    },
+    "JwtEncryption": {
+        "Key": "9F8vQ7pL1RxBZk3Dh5MnT2aK",
+        "IV": "sR7mTqVp9XkBzLwD"
     }
 }
